deploy/k8s/base/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: shopcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: REPLACE_ME/shopcloud/auth:dev
          ports:
            - containerPort: 8004
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8004
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8004
            initialDelaySeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: shopcloud
spec:
  selector:
    app: auth
  ports:
    - port: 8004
      targetPort: 8004
