deploy/k8s/base/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: shopcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: REPLACE_ME/shopcloud/checkout:dev
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8003
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8003
            initialDelaySeconds: 20
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: shopcloud
spec:
  selector:
    app: checkout
  ports:
    - port: 8003
      targetPort: 8003
